server_error_5.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
warning: unused import: `chrono::Utc`
 --> crates\ask_pete_core\src\reflection.rs:4:5
  |
4 | use chrono::Utc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `pool`
  --> crates\ask_pete_core\src\reflection.rs:17:5
   |
17 |     pool: &PgPool,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `user_id`
  --> crates\ask_pete_core\src\reflection.rs:18:5
   |
18 |     user_id: i64,
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_user_id`

warning: unused variable: `challenge_name`
  --> crates\ask_pete_core\src\reflection.rs:19:5
   |
19 |     challenge_name: &...
   |     ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_challenge_name`

warning: unused variable: `reflection_text`
  --> crates\ask_pete_core\src\reflection.rs:20:5
   |
20 |     reflection_text: &...
   |     ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_reflection_text`

warning: `ask_pete_core` (lib) generated 5 warnings (run `cargo fix --lib -p ask_pete_core` to apply 1 suggestion)
    Checking ask_pete_ai v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_ai)
error[E0433]: failed to resolve: could not find `weigh_station` in the crate root
  --> crates\ask_pete_ai\src\socratic_engine.rs:32:34
   |
32 |     weigh_station: Option<crate::weigh_station::WeighStation>,
   |                                  ^^^^^^^^^^^^^ could not find `weigh_station` in the crate root

error[E0433]: failed to resolve: could not find `weigh_station` in the crate root
  --> crates\ask_pete_ai\src\socratic_engine.rs:71:36
   |
71 |         let weigh_station = crate::weigh_station::WeighStation::new(model.clone());
   |                                    ^^^^^^^^^^^^^ could not find `weigh_station` in the crate root

error[E0412]: cannot find type `LocalModel` in module `crate::local_inference`
  --> crates\ask_pete_ai\src\socratic_engine.rs:30:49
   |
30 |     local_model: Option<crate::local_inference::LocalModel>,
   |                                                 ^^^^^^^^^^ not found in `crate::local_inference`
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::LocalModel;
   |
help: if you import `LocalModel`, refer to it directly
   |
30 -     local_model: Option<crate::local_inference::LocalModel>,
30 +     local_model: Option<LocalModel>,
   |

error[E0412]: cannot find type `LocalModel` in module `crate::local_inference`
  --> crates\ask_pete_ai\src\socratic_engine.rs:69:70
   |
69 |     pub fn set_local_model(&mut self, model: crate::local_inference::LocalModel) {
   |                                                                      ^^^^^^^^^^ not found in `crate::local_inference`
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::LocalModel;
   |
help: if you import `LocalModel`, refer to it directly
   |
69 -     pub fn set_local_model(&mut self, model: crate::local_inference::LocalModel) {
69 +     pub fn set_local_model(&mut self, model: LocalModel) {
   |

Some errors have detailed explanations: E0412, E0433.
For more information about an error, try `rustc --explain E0412`.
error: could not compile `ask_pete_ai` (lib) due to 4 previous errors
